<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/activity_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/title_below_margin"
        android:text="@string/app_name_to_korean"
        android:gravity="center"
        style="@style/Font.Title"/>
    <Button
        android:id="@+id/intercity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/intercity"
        android:gravity="center"
        style="@style/Font.Big"
        android:onClick="clickIntercityButton"/>
    <Button
        android:id="@+id/city_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/intercity_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/city"
        android:gravity="center"
        style="@style/Font.Big"
        android:onClick="clickCityButton"/>
</RelativeLayout>
