<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:theme="@style/AppTheme.ActivityBackground">
    <RelativeLayout
        android:id="@+id/select_destination_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_destination"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/destination"
            style="@style/Font.Big.Bold"/>
        <TextView
            android:id="@+id/text_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/label_destination"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:hint="@string/pleaseSelectDestination"
            style="@style/Font"/>
        <Button
            android:id="@+id/button_selectDestination"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/select"
            style="@style/Font.Big"
            android:onClick="clickSelectDestinationButton"/>
    </RelativeLayout>
    <View
        android:id="@+id/vertical_line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#000000"
        android:layout_below="@id/select_destination_area"/>
    <RelativeLayout
        android:id="@+id/destination_info_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vertical_line1">
        <LinearLayout
            android:id="@+id/required_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/required"
                style="@style/Font.Big.Bold"/>
            <TextView
                android:id="@+id/text_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:text="1시간 20분"
                style="@style/Font.Big"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fee_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/required_area"
            android:layout_alignParentLeft="true"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/adult"
                style="@style/Font"/>
            <TextView
                android:id="@+id/text_adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="600원"
                style="@style/Font"/>
            <TextView
                android:id="@+id/label_teenager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/teenager"
                style="@style/Font"/>
            <TextView
                android:id="@+id/text_teenager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="600원"
                style="@style/Font"/>
            <TextView
                android:id="@+id/label_child"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/child"
                style="@style/Font"/>
            <TextView
                android:id="@+id/text_child"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="600원"
                style="@style/Font"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:id="@+id/vertical_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#000000"
        android:layout_below="@id/destination_info_area"/>
    <LinearLayout
        android:id="@+id/recyclerView_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vertical_line2">
        <TextView
            android:id="@+id/text_header_departure_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="출발시각"
            style="@style/Font"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>
        <TextView
            android:id="@+id/text_header_stops_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            style="@style/Font"
            android:text="경유지"/>
    </LinearLayout>
    <View
        android:id="@+id/vertical_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_below="@id/recyclerView_header"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/time_table_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@id/vertical_line3" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_dialog_email" />
</RelativeLayout>